# transformer-from-scratch-notes

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: experiment.yaml  experiment_matrix.yaml
data/processed/: imdb_examples.jsonl
docs/: research_brief.md  top_tier_reviewer_packet.md  training_loop.md
examples/: analyze_real_imdb_tokens.py  run_attention_demo.py  run_block_demo.py  run_positional_encoding.py  run_tiny_training.py  save_demo_checkpoint.py
notebooks/: maturity_walkthrough.ipynb
reports/: demo_checkpoint.json  full_training_log.csv  full_training_report.md  maturity_review.md  notes.md  real_imdb_token_analysis.json  real_imdb_token_analysis.md  tiny_training_analysis.md  tiny_training_curve.csv  transformer_from_scratch_v2_research_report.md  transformer_gpu_training_report.md
reports/results/: artifact_manifest.json  checkpoint_metadata.json  claim_evidence_matrix.csv  experiment_index.json  reproducibility_manifest.json  tiny_transformer_checkpoint.pt  tiny_transformer_curve.csv  tiny_transformer_metrics.json  top_tier_quality_gate.json  v2_deeper_encoder_curve.csv  (+6 more)
scripts/: analyze_failures.py  download_data.py  gpu_experiment.py  make_report.py  preprocess_data.py  run_experiment.py  run_matrix.py
tests/: conftest.py  test_attention.py  test_block.py  test_checkpoint.py  test_maturity_assets.py  test_positional.py  test_real_experiment_artifacts.py  test_real_imdb_stats.py  test_top_tier_quality_gate.py  test_training.py  test_v2_research_artifacts.py
(+11 files in other folders)
